// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`XMarkdown animation parent is custom components 1`] = `
<div>
  <div
    class="ant-x-markdown x-markdown"
    style="direction: ltr;"
  >
    <p>
      This is Text.
    </p>
  </div>
</div>
`;

exports[`XMarkdown animation parent is not custom components 1`] = `
<div>
  <div
    class="ant-x-markdown x-markdown"
    style="direction: ltr;"
  >
    <p>
      <span
        style="animation: x-markdown-fade-in 200ms ease-in-out forwards;"
      >
        This is Text.
      </span>
    </p>
  </div>
</div>
`;
